--- a/kubernetes/memcached-deployment.yaml
+++ b/kubernetes/memcached-deployment.yaml
@@ -21,9 +21,9 @@ spec:
         io.kompose.service: memcached
     spec:
       containers:
-      - image: memcached:1.4.24
-        name: edx.devstack.memcached
-        resources: {}
+        - image: memcached:1.4.24
+          name: edx-devstack-memcached
+          resources: {}
       hostname: memcached.devstack.edx
       restartPolicy: Always
 status: {}
