--- a/kubernetes/lms-deployment.yaml
+++ b/kubernetes/lms-deployment.yaml
@@ -22,37 +22,37 @@ spec:
         io.kompose.service: lms
     spec:
       containers:
-      - args:
-        - bash
-        - -c
-        - source /edx/app/edxapp/edxapp_env && while true; do python /edx/app/edxapp/edx-platform/manage.py
-          lms runserver 0.0.0.0:18000 --settings devstack_docker; sleep 2; done
-        env:
-        - name: BOK_CHOY_CMS_PORT
-          value: "18031"
-        - name: BOK_CHOY_HOSTNAME
-          value: edx.devstack.lms
-        - name: BOK_CHOY_LMS_PORT
-          value: "18003"
-        - name: EDXAPP_TEST_MONGO_HOST
-          value: edx.devstack.mongo
-        - name: NO_PYTHON_UNINSTALL
-          value: "1"
-        image: edxops/edxapp:latest
-        name: edx.devstack.lms
-        ports:
-        - containerPort: 18000
-        - containerPort: 19876
-        resources: {}
-        stdin: true
-        tty: true
-        volumeMounts:
-        - mountPath: /edx/var/edxapp/staticfiles/
-          name: edxapp-lms-assets
-      hostname: lms.devstack.edx
+        - args:
+            - bash
+            - -c
+            - source /edx/app/edxapp/edxapp_env && while true; do python /edx/app/edxapp/edx-platform/manage.py
+              lms runserver 0.0.0.0:18000 --settings devstack_docker; sleep 2; done
+          env:
+            - name: BOK_CHOY_CMS_PORT
+              value: "18031"
+            - name: BOK_CHOY_HOSTNAME
+              value: edx-devstack-lms
+            - name: BOK_CHOY_LMS_PORT
+              value: "18003"
+            - name: EDXAPP_TEST_MONGO_HOST
+              value: edx-devstack-mongo
+            - name: NO_PYTHON_UNINSTALL
+              value: "1"
+          image: edxops/edxapp:latest
+          name: edx-devstack-lms
+          ports:
+            - containerPort: 18000
+            - containerPort: 19876
+          resources: {}
+          stdin: true
+          tty: true
+          volumeMounts:
+            - mountPath: /edx/var/edxapp/staticfiles/
+              name: edxapp-lms-assets
+      hostname: lms-devstack-edx
       restartPolicy: Always
       volumes:
-      - name: edxapp-lms-assets
-        persistentVolumeClaim:
-          claimName: edxapp-lms-assets
+        - name: edxapp-lms-assets
+          persistentVolumeClaim:
+            claimName: edxapp-lms-assets
 status: {}
