--- a/kubernetes/memcached-deployment.yaml
+++ b/kubernetes/memcached-deployment.yaml
@@ -24,6 +24,6 @@ spec:
         - image: memcached:1.4.24
           name: edx-devstack-memcached
           resources: {}
-      hostname: memcached.devstack.edx
+      hostname: memcached-devstack-edx
       restartPolicy: Always
 status: {}
