--- a/kubernetes/lms-service.yaml
+++ b/kubernetes/lms-service.yaml
@@ -9,13 +9,14 @@ metadata:
     io.kompose.service: lms
   name: lms
 spec:
+  type: LoadBalancer
   ports:
-  - name: "18000"
-    port: 18000
-    targetPort: 18000
-  - name: "19876"
-    port: 19876
-    targetPort: 19876
+    - name: "18000"
+      port: 18000
+      targetPort: 18000
+    - name: "19876"
+      port: 19876
+      targetPort: 19876
   selector:
     io.kompose.service: lms
 status:
