--- a/kubernetes/mysql-deployment.yaml
+++ b/kubernetes/mysql-deployment.yaml
@@ -30,32 +30,8 @@ spec:
             - name: MYSQL_ALLOW_EMPTY_PASSWORD
               value: "yes"
             - name: MYSQL_ROOT_PASSWORD
-            - name: SQL_PROVISION
-              value: "CREATE DATABASE IF NOT EXISTS credentials;
-                      GRANT ALL ON credentials.* TO 'credentials001'@'%' IDENTIFIED BY 'password';
-
-                      CREATE DATABASE IF NOT EXISTS discovery;
-                      GRANT ALL ON discovery.* TO 'discov001'@'%' IDENTIFIED BY 'password';
-
-                      CREATE DATABASE IF NOT EXISTS ecommerce;
-                      GRANT ALL ON ecommerce.* TO 'ecomm001'@'%' IDENTIFIED BY 'password';
-
-                      CREATE DATABASE IF NOT EXISTS edxmktg;
-                      GRANT ALL ON edxmktg.* TO 'edxmktg001'@'%' IDENTIFIED BY 'password';
-
-                      CREATE DATABASE IF NOT EXISTS notes;
-                      GRANT ALL ON notes.* TO 'notes001'@'%' IDENTIFIED BY 'password';
-
-                      CREATE DATABASE IF NOT EXISTS edxapp;
-                      CREATE DATABASE IF NOT EXISTS edxapp_csmh;
-                      GRANT ALL ON edxapp.* TO 'edxapp001'@'%' IDENTIFIED BY 'password';
-                      GRANT ALL ON edxapp_csmh.* TO 'edxapp001'@'%';
-
-                      FLUSH PRIVILEGES;"
           image: mysql:5.6
           name: edx-devstack-mysql
-          command: ["mysql"]
-          args: [$(SQL_PROVISION)]
           resources: {}
           volumeMounts:
             - mountPath: /var/lib/mysql
@@ -67,3 +43,15 @@ spec:
           persistentVolumeClaim:
             claimName: mysql-data
 status: {}
+
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: mysql-initdb-config
+data:
+  initdb.sql: |
+    CREATE TABLE friends (id INT, name VARCHAR(256), age INT, gender VARCHAR(3));
+    INSERT INTO friends VALUES (1, 'John Smith', 32, 'm');
+    INSERT INTO friends VALUES (2, 'Lilian Worksmith', 29, 'f');
+    INSERT INTO friends VALUES (3, 'Michael Rupert', 27, 'm');
