--- a/kubernetes/mysql-deployment.yaml
+++ b/kubernetes/mysql-deployment.yaml
@@ -31,8 +31,7 @@ spec:
               value: "yes"
             - name: MYSQL_ROOT_PASSWORD
             - name: SQL_PROVISION
-              value: "-uroot mysql \
-                      CREATE DATABASE IF NOT EXISTS credentials;GRANT ALL ON credentials.* TO 'credentials001'@'%' IDENTIFIED BY 'password';CREATE DATABASE IF NOT EXISTS discovery;
+              value: "CREATE DATABASE IF NOT EXISTS credentials;GRANT ALL ON credentials.* TO 'credentials001'@'%' IDENTIFIED BY 'password';CREATE DATABASE IF NOT EXISTS discovery;
                       GRANT ALL ON discovery.* TO 'discov001'@'%' IDENTIFIED BY 'password';
                       CREATE DATABASE IF NOT EXISTS ecommerce;
                       GRANT ALL ON ecommerce.* TO 'ecomm001'@'%' IDENTIFIED BY 'password';
@@ -48,7 +47,7 @@ spec:
           image: mysql:5.6
           name: edx-devstack-mysql
           command: ["mysql"]
-          args: [$(SQL_PROVISION)]
+          args: ["-uroot mysql", "$(SQL_PROVISION)"]
           resources: {}
           volumeMounts:
             - mountPath: /var/lib/mysql
